<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.recoded.motico.PlayerActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/player_activity_desc"/>
    <ImageView
        android:id="@+id/track_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/album_card" />

    <TextView
        android:id="@+id/track_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@id/track_image"
        android:text="@string/now_playing_track" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:min="0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/prev" />

            <Button
                android:id="@+id/button_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/play" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:text="@string/next" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
