<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/now_playing_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/album_card_back"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_track" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/albums_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_desc"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pop"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:id="@+id/pop_albums_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rock"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:id="@+id/rock_albums_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jazz"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:id="@+id/jazz_albums_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/subscribe_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/subscribe" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/play_list_container_sv"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_above="@id/now_playing_bar"
        android:layout_marginBottom="4dp"
        android:background="@drawable/play_list_back"
        android:padding="4dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/play_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/playlist_description" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
